#
# FILE             $Id: Makefile.am 10 2008-05-30 14:59:11Z burlog $
#
# PROJECT          KHTML JavaScript compress utility
#
# DESCRIPTION      Project makefile.
#
# AUTHOR           Michal Bukovsky <michal.bukovsky@firma.seznam.cz>
#
#  LICENSE         see COPYING
#
# Copyright (C) Seznam.cz a.s. 2007
# All Rights Reserved
#
# HISTORY
#       2007-03-09 (bukovsky)
#                  First draft.
#


SUBDIRS = src/kjs src

man_MANS = csscompress.1 kjscompress.1

EXTRA_DIST = csscompress.1 kjscompress.1
