#
# FILE             $Id: configure.in 23 2011-04-06 10:16:22Z burlog $
#
# PROJECT          KHTML JavaScript compress utility
#
# DESCRIPTION      Project configure.
#
# AUTHOR           Michal Bukovsky <michal.bukovsky@firma.seznam.cz>
#
#  LICENSE         see COPYING
#
# Copyright (C) Seznam.cz a.s. 2007
# All Rights Reserved
#
# HISTORY
#       2007-03-09 (bukovsky)
#                  First draft.
#

# initialize autoconf
AC_INIT(kjscompress, 1.1.3, michal.bukovsky@firma.seznam.cz)

# initialize automake(use AC_INIT's arguments)
AM_INIT_AUTOMAKE(-Wall foreign)

# tell autoconf where to find sources
AC_CONFIG_SRCDIR([src/main.cc])

AC_PREREQ(2.50)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_DISABLE_SHARED
AC_PROG_LIBTOOL
AM_PROG_LIBTOOL

CPPFLAGS="$CPPFLAGS -D__ENABLE_WSTRING"

# from kde
AM_CONFIG_HEADER([src/kjs/config.h src/kjs/global.h])

AC_CHECK_HEADERS(sys/param.h time.h strings.h limits.h pcreposix.h)

AC_CHECK_FUNCS(gettimeofday)

AC_HEADER_TIME

AC_CHECK_LIB(m, isinf, [
  AC_DEFINE_UNQUOTED(HAVE_FUNC_ISINF, 1, [Define if you have isinf])
])
AC_CHECK_LIB(m, finite, [
  AC_DEFINE_UNQUOTED(HAVE_FUNC_FINITE, 1, [Define if you have finite])
])
AC_CHECK_LIB(m, _finite, [
  AC_DEFINE_UNQUOTED(HAVE_FUNC__FINITE, 1, [Define if you have _finite])
])

AC_CHECK_LIB(m, isnan, [
  AC_DEFINE_UNQUOTED(HAVE_FUNC_ISNAN, 1, [Define if you have isnan])
])

AC_CHECK_LIB(pcreposix, pcre_version, [
  AC_DEFINE(HAVE_PCREPOSIX, 1, [Define if you have pcreposix libraries and header files.])
  LIBS="-lpcre -lpcreposix $LIBS"
])
# end from kde




AC_ARG_ENABLE(optimization,[  --enable-optimization compile optimized without debug logging],[
    case "${enableval}" in
        no)
            AC_MSG_NOTICE([disabling optimization.])
            CPPFLAGS="${CPPFLAGS} -DDEBUG=1"
        ;;
        yes)
            AC_MSG_NOTICE([enabling optimization.])
            CXXEXTRAFLAGS="${CXXEXTRAFLAGS} -O2"
            CPPFLAGS="${CPPFLAGS} -UDEBUG -DNDEBUG"
        ;;
        *)
            AC_MSG_ERROR([Say yes or no to --enable-optimization.])
        ;;
    esac
], [
   CPPFLAGS="${CPPFLAGS} -DDEBUG=1"
])

AC_SUBST(CXXEXTRAFLAGS)

AC_OUTPUT(Makefile version src/Makefile src/kjs/Makefile)
